--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "jsx",
+  "name": "todo-fetch",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "http-server": "^0.11.1",
-    "json-server": "^0.12.1"
+    "http-server": "^14.1.1",
+    "json-server": "^1.0.0-beta.3"
   }
 }
